<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">mimer</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!--login-->
    <string name="textlogin_id">账号</string>
    <string name="textlogin_password">密码</string>
    <string name="rememberpassword">记住密码</string>
    <string name="autologin">自动登陆</string>
    <string name="text_loginbutton">登陆</string>

    <string name="tab_menu_alert">聊天</string>
    <string name="tab_menu_profile">通讯录</string>
    <string name="tab_menu_pay">我的</string>
    <string name="tab_menu_setting">设置</string>
</resources>
