<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/login_avatar"
        android:layout_width="@dimen/avatar_size"
        android:layout_height="@dimen/avatar_size"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:src="@drawable/mimer"
        android:background="@drawable/avatar_shape" />
    <EditText
        android:id="@+id/login_id"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:background="@color/usernam_passwd"
        android:hint="@string/textlogin_id"
        android:textColorHint="@color/login_input_hint"
        android:paddingLeft="8dp"
        />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@color/usernam_passwd"
        android:hint="@string/textlogin_password"
        android:textColorHint="@color/login_input_hint"
        android:paddingLeft="8dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <CheckBox
            android:id="@+id/login_rememberpassword"
            android:layout_width="200dp"
            android:layout_height="32dp"
            android:textColor="@color/text_color"
            android:text="@string/rememberpassword" />

        <CheckBox
            android:id="@+id/login_autologin"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:textColor="@color/text_color"
            android:layout_alignParentRight="true"
            android:text="@string/autologin" />
    </RelativeLayout>

    <TextView
        android:id="@+id/login_button"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_shape"
        android:text="@string/text_loginbutton"
        android:gravity="center"
        android:textColor="@color/text_color"
        android:textSize="20dp" />

    <TextView android:id="@+id/goto_signup"
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="没有账户？ 创建一个..."
        android:textColor="@color/text_color"
        android:gravity="center"
        android:textSize="16dip"/>
</LinearLayout>